--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "atcha",
+  "name": "atcha0119",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@firebase/auth": "^1.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
-    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
